# gmaps-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
resources/: Info.plist.ext
scripts/: build.sh
src/: config.rs  format.rs  http.rs  main.rs  places.rs  wizard.rs
src/api/: geocoding.rs  mod.rs  places.rs  routes.rs
src/commands/: config.rs  geocode.rs  mod.rs  nearby.rs  places.rs  route.rs  util.rs  whereami.rs
src/location/: gps.rs  mod.rs
